--- a/index.yaml
+++ b/index.yaml
@@ -5,11 +5,11 @@ items:
     title: "CFGS Desenvolupament d'aplicacions multiplataforma"
     items:
       m3:
-        title: "M3 - Programació"
+        title: "Programació"
         items:
           javatutorial: { tags:  [programacio, android, java] }
           uf1:
-            title: "UF1 - Programacio estructurada"
+            title: "Programacio estructurada"
             items:
               projectes:
                 title: "Projectes"
@@ -35,40 +35,32 @@ items:
               refactoring: { tags:  [programacio, android, java] }   
               debugger: { tags:  [programacio, android, java] }   
           uf2:
-            title: "UF2 - Disseny modular"
+            title: "Disseny modular"
             items:
               github: { tags:  [programacio, android, java] }
               junit: { tags:  [programacio, android, java] }
-              gradle: { tags:  [programacio, android, java] }
+              gradle2: { tags:  [programacio, android, java] }
               libgdx: { tags:  [programacio, android, java] }
               android: { tags:  [programacio, android, java] }
           uf3:
-            title: "UF3. Fonaments de gestió de fitxers"
+            title: "Fonaments de gestió de fitxers"
             items:
       entorns:
         title: "Entorns de desenrotllament"
         items:
           docker: { tags:  [programacio, android, java] }
+          gradle: { tags:  [programacio, android, java] }
       m6:
-        title: "M6 - Acces a dades"
+        title: "Acces a dades"
         items:
-          uf1:
-            title: "UF1 - Persistència en fitxers"
-            items:
-              persistence: { tags:  [programacio, android, java] }
-          uf2:
-            title: "UF2 - Persistència en BDR-BDOR-BDOO"
-            items:
-              springboot: { tags:  [programacio, android, java] } 
-          uf3:
-            title: "UF3 - Persistència en BD natives XML"
-            items:
-              firebase2: { tags:  [programacio, android, java] }
+          persistence: { tags:  [programacio, android, java] }
+          springboot: { tags:  [programacio, android, java] } 
+          firebase2: { tags:  [programacio, android, java] }
       m8:
-        title: "M8 - Programació de dispositius mòbils"
+        title: "Programació de dispositius mòbils"
         items:
           uf1:
-            title: "UF1. Desenvolupament d'aplicacions per dispositius mòbils"
+            title: "Desenvolupament d'aplicacions per dispositius mòbils"
             items:
               apps:  { tags:  [programacio, android, java] }
               fragments: { tags:  [programacio, android, java] }        
@@ -81,55 +73,55 @@ items:
               jsonmapping: { tags:  [programacio, android, java] }   
               cheat: { tags:  [programacio, android, java] }
           uf2:
-            title: "UF2 - Programació multimèdia"
+            title: "Programació multimèdia"
             items:
               firebase: { tags:  [programacio, android, java] }   
               authentication: { tags:  [programacio, android, java] }    
               firestore: { tags:  [programacio, android, java] }             
               storage: { tags:  [programacio, android, java] }
           uf3:
-            title: "UF3. Desenvolupament de jocs per dispositius mòbils"
+            title: "Desenvolupament de jocs per dispositius mòbils"
             items:
   asix:
     title: "CFGS Administració de sistemes informàtics en xarxa"
     items:
       m8:
-        title: "M8 - Serveis de xarxa i internet"
+        title: "Serveis de xarxa i internet"
         items:
           uf1:
-            title: "UF1 - Servidor dns i dhcp"
+            title: "Servidor dns i dhcp"
           uf2:
-            title: "UF2 - Servidor web"
+            title: "Servidor web"
             items:
               docker: { tags:  [programacio, android, java] }
           uf3: 
-            title: "UF3 - Servidor de correu i missatgeria"
+            title: "Servidor de correu i missatgeria"
           uf4:
-            title: "UF4 - Servidor de vídeo i àudio"
+            title: "Servidor de vídeo i àudio"
   daw:
     title: "CFGS Desenvolupament d'aplicacions web"
     items:
       m8:
-        title: "M8 - Desplegament d'aplicacions"
+        title: "Desplegament d'aplicacions"
         items:
           uf1:
-            title: "UF1 - Servidors web i de transferència de fitxers"
+            title: "Servidors web i de transferència de fitxers"
             items:
               webtech: { tags:  [programacio, android, java] }
               daw-m8-virtmanager: { tags:  [programacio, android, java] }  
               nginx: { tags:  [programacio, android, java] }                  
           uf2:
-            title: "UF2 - Servidors d'aplicacions web"
+            title: "Servidors d'aplicacions web"
             items:
               daw-m8-dockerwp: { tags:  [programacio, android, java] }
           uf3:
-            title: "UF3 - Desplegament d'aplicacions web"
+            title: "Desplegament d'aplicacions web"
             items:
           uf4:
-            title: "UF4 - Control de versions i documentació"
+            title: "Control de versions i documentació"
             items:
       m3:
-        title: "M3 - Programacio"
+        title: "Programacio"
         items:
           javatutorial: { tags:  [programacio, android, java] }
       entorns:
@@ -140,10 +132,10 @@ items:
     title: "CFGM Sistemes microinformàtics i xarxes"
     items:
       m8:
-        title: "M8 - Aplicacions web"
+        title: "Aplicacions web"
         items:
           uf1:
-            title: "UF1 - Ofimàtica  i  eines web"
+            title: "Ofimàtica  i  eines web"
             items:
               einesgoogle: { tags:  [programacio, android, java] }
               entorndetreball: { tags:  [programacio, android, java] } 
@@ -151,25 +143,25 @@ items:
               aws: { tags:  [programacio, android, java] }  
               webapps: { tags:  [programacio, android, java] }
           uf2:
-            title: "UF2 - Gestors d'arxius web"
+            title: "Gestors d'arxius web"
             items:
               nextcloud: { tags:  [programacio, android, java] }   
               webfilemanager: { tags:  [programacio, android, java] }  
           uf3:
-            title: "UF3 - Gestors de continguts"
+            title: "Gestors de continguts"
             items:
               wordpress: { tags:  [programacio, android, java] }
               webcms: { tags:  [programacio, android, java] }   
               webtasks: { tags:  [programacio, android, java] }
           uf4:
-            title: "UF4 - Portals web d'aprenentatge "
+            title: "Portals web d'aprenentatge "
             items:
               moodle: { tags:  [programacio, android, java] }
               webforum: { tags:  [programacio, android, java] }
               webaccounts: { tags:  [programacio, android, java] }
               weblms: { tags:  [programacio, android, java] }
           uf5:
-            title: "UF5 - Fonaments d'HTML i fulls d'estils "
+            title: "Fonaments d'HTML i fulls d'estils "
             items:
               inicihtml: { tags:  [programacio, android, java] }   
               inicicss: { tags:  [programacio, android, java] }
