--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,4 +8,4 @@ services:
     volumes:
       - ./:/web
     working_dir: /web
-    command: bash -c "npm install && npm run build"
+    command: bash -c "npm install && npm run dev"
